# yoo_front

./: .gitignore  README.md  main.py  pylock.toml  pyproject.toml  requirements.txt
core/: config_manager.py  downloader.py
ui/: link_item_widget.py  main_window.py
