[project]
name = "yoo_front"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.5",
    "brotli==1.2.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "darkdetect==0.7.1",
    "future==1.0.0",
    "idna==3.11",
    "mutagen==1.47.0",
    "packaging==25.0",
    "pefile==2024.8.26",
    "platformdirs==4.5.0",
    "pycryptodomex==3.23.0",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.10",
    "pyqtdarktheme==2.1.0",
    "pyside6==6.10.0",
    "pyside6-addons==6.10.0",
    "pyside6-essentials==6.10.0",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "shiboken6==6.10.0",
    "tqdm==4.67.1",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yt-dlp==2025.11.12",
    "yt-dlp-ejs==0.3.1",
]
